tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__TrickyNuclearFue-AAAAAAAAAAAAAAAAAAAHaQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1897,
  "prerequisites": [
    192
  ],
  "properties": {
    "auto_claim": false,
    "desc": "They're so not worth it I'm just going to give you back the materials. Like naquadah, they're the same as MOX other than materials.\n\n[note]PS: You can get Nq* from both centrifuging Nq or Nq+ dust, processing the ores, or thermal centrifuging the depleted Nq+ rods.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tricky Nuclear Fuel II: Naquadria",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    192
  ],
  "rewards": [],
  "tasks": []
}
