tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__TripleCompressed-AAAAAAAAAAAAAAAAAAAFOg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1338,
  "prerequisites": [
    1890,
    1336
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Triple Compressed Solars. Yes, that's right. They are a bit more expensive than their lower counterparts, 512 Solars in total. But they give out 1,000 GT EU per tick and have no need to be cleaned. How so? Magic.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Triple Compressed Solar",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1890,
    1336
  ],
  "rewards": [],
  "tasks": []
}
