tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__TurbineHousing-J2ok3rFLS7quyIlHPaN0FQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12775388031236666389,
  "prerequisites": [
    1200,
    2613
  ],
  "properties": {
    "auto_claim": false,
    "desc": "At UV you unlock the ability to automatically refill turbines with rotors.\n\nXL turbines do it by default much earlier...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Turbine Housing",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1200,
    2613
  ],
  "rewards": [],
  "tasks": []
}
