tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__WeNeedBigToys-AAAAAAAAAAAAAAAAAAADDw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 783,
  "prerequisites": [
    160
  ],
  "properties": {
    "auto_claim": false,
    "desc": "All your little turbines take up too much space? Are you running out of water? It's time to solve these problems. This Large Steam Turbine can help you produce a tremendous amount of energy. It will also distill water for you, so you can use the same water again inside your Large Boiler. Don't forget to make a rotor for the turbine and put inside the controller, otherwise this multiblock won't do anything.\n\nEach turbine has a specific optimal flow, the Steam flow that gives the highest fuel efficiency, the value shown on the turbine's tooltip. This is the flow you want to match, and you can use a Fluid Regulator as a cover to make it exactly what you want, but you can go beyond this flow to get an even higher EU/t value, at a loss of fuel efficiency. You can make turbines in 4 different sizes, with larger turbines producing more EU/t, but with varying amounts of fuel efficiency. Generally, Large is the best due to having the highest fuel efficiency and a good optimal flow rate\n\nWhen using turbines, be careful of flow rates. To find the optimal flow rate, you divide the optimal energy flow rate listed on the turbine, by the energy value for the plasma. You can also use the Large Turbine Calculator (there's a link on the main spreadsheet, which is linked to in discord), or scan the multiblock's controller while feeding it a minimal amount of plasma to see what the optimal flow is. Make sure to use a Fluid Regulator set to this flow rate for highest fuel efficiency, or go beyond it to get more EU/t at a cost to efficiency, with Steam Turbines being the worst at retaining efficiency beyond the optimal flow.\n\nIf you go beyond the optimal flow, you will get a higher EU/t value, but less fuel efficiency, and the maximum EU/t value depends on the turbine type and its Overflow Efficiency tier. For this type of turbine, tier 1 reaches the max at 150% of optimal flow to produce 112% of the EU/t, tier 2 reaches the max at 200% of optimal flow to produce 133% of the EU/t and tier 3 reaches the max at 250% of optimal flow to produce 156% of the EU/t. The closer you get to this maximum, the more fuel efficiency you're throwing away. Don't exceed your dynamo hatch's maximum EU/t output, though, or you will have problems!\n\nUse NEI with the appropriate long rod to find assembler recipes that will work for you. Or the spreadsheet. Long magnalium for small turbines, long titanium for normal turbines, etc.\n\nPre-moon, the best rotors are Shadow Metal or Vibrant Alloy.\n\nPost-moon, the best HV rotors are Shadow Metal or Oriharukon (this is IV-tier). Luckily, turbines are now fully functional with multi-amp dynamos, so give those a try if you need extra amps!\n\nFor additional choices, see the spreadsheet and Large Turbine Calculator.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lWe Need Big Toys",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160
  ],
  "rewards": [],
  "tasks": []
}
