tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__WhatWasThatICant-AAAAAAAAAAAAAAAAAAAFyQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1481,
  "prerequisites": [
    860,
    1245
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Extreme Combustion Engine is an upgrade to the Large Combustion Engine, the IV version that needs Tungstensteel instead of Titanium. The structure is essentially the same, and it's almost a 1:1 ratio between the two materials, so this is a good generator when you've accumulated several stacks of Tungstensteel.\n\nThe caveat is that it only accepts High Octane Gasoline. This is the last and most powerful type of combustion fluid made from Oil, and it has the longest processing line of them all. As a reward, it has an excellent §a2.5M EU per bucket§r, and you can burn it here alongside some Liquid Oxygen for almost §a4 IV amps per tick.\n\n§cThe Liquid Oxygen is very important, because it greatly boosts the speed of the multi and the fuel efficiency as well.§r It needs 40 L/s, so you will need more than one Vacuum Freezer to supply it continuously: for an ECE that is always running, you will need a double Vacuum Freezer, 1 EV and 1 HV. You can run fewer freezers if you overclock them, if the ECE isn't working all the time or if you upgrade to a Cryogenic Freezer,",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "What Was That? I Can't Hear You Over the Engine!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860,
    1245
  ],
  "rewards": [],
  "tasks": []
}
