tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__WhoNeedsUVSolars-AAAAAAAAAAAAAAAAAAAKJA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2596,
  "prerequisites": [
    2818,
    3236
  ],
  "properties": {
    "auto_claim": false,
    "desc": "16,777,216 Solars!!! This single block can produce a maximum of 600m EU/t when in aqua form, that's balanced right... right?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Who Needs UV Solars When You Have Magic",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2818,
    3236
  ],
  "rewards": [],
  "tasks": []
}
