tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__XLTurboPlasmaTur-dQ1k0UZVR8ObXotgcryKbw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5068035860444514927,
  "prerequisites": [
    1200,
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Is plasma flow making the turbines spin? No, it's just water into steam into water, all recycled inside, 12 times over. Check the XL Steam Turbine quest above for an explanation of the mechanics shared across all turbines.\n\nThis turbine, unlike the others, has very important differences to the regular multi that you have to keep in mind. Given that plasma power is so easy to upscale with the use of compact reactors, XL Plasma Turbines would have to follow suit and bring progression's EU numbers to ridiculous degrees, off one single plasma. However, this XL now applies an EU/t penalty to its production by comparing the fuel value of the plasma it processes with the rotor material it has inside.\n\nSee [url]https://i.imgur.com/vifsk0P.png[/url] for various combinations of plasmas and materials. Mk1 plasmas are in green, Mk2 in yellow and Mk3 in red. The bottom 3 are the final plasmas of the fusion chains.\n\nThe formula is a bit complicated, but here are some important values:\n\n-> Helium Plasma receives a huge penalty of 86.1% even with Infinity Catalyst, whereas Tin's penalty is only 53.5%, which means that the number of reactors and XLs with this material is twice the expected amount if using Tin Plasma;\n-> Trinium changes these numbers to 92.4% and 74.5%, respectively;\n-> Infinity further increases the penalty to 97.4% and 91.1%;\n-> Spacetime sets these values to 98.3% and 94.4%.\n\nThis means that, at the UHV/UEV stage, you will no longer be able to rely on these two plasmas with your XLs. For 1-recipe plasmas, your best option is the mk3 Americium Plasma, which has an insignificant 0.8% penalty with Infinity. If you want faster powergen than that, check out the complete fusion chain that ends at Celestial Tungsten Plasma, which has no penalties in the XL Plasma Turbine and has total EU/t numbers compared to Helium's old ones. Check below for quests regarding the fusion chains.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "XL Turbo Plasma Turbine",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1200,
    2610
  ],
  "rewards": [],
  "tasks": []
}
